Changes for 2.2.2rc1

New features:
........S. [ZBXNEXT-2069] added HOST.PORT macro support for internal and trigger based notifications (wiper)
A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-7591] fixed deleting web scenario steps on template linked to host (Ivo)
..F....... [ZBX-7508] fixed import map with LLD triggers (Eduard)
..F....... [ZBX-7518] fixed graph scrollbar overflow when clicking period "All" and with no page refresh option (Ivo)
A......... [ZBX-7578] fixed graph item validation (Eduard)
..F....... [ZBX-7616] fixed green background color for "New group" field in host edit form (Ivo)
...G...... [ZBX-7567] fixed processing of services[] key without a 3rd parameter (Sasha)
..F.....S. [ZBX-7573] fixed item being checked at a wrong time when using flexible intervals (asaveljevs)
........S. [ZBX-6545] fixed possible SQL errors when syncing a node configuration with PostgreSQL backend version 8.2 and later (Sasha)
........S. [ZBX-7452] fixed processing of received events from slave node (Sasha)
.......... [ZBXNEXT-1256] fixed parameter passing for example userparameter to obtain process CPU usage (Richlv)
.......... [ZBXNEXT-1256] fixed parameter passing for example userparameter to obtain directory size (Richlv)
........S. [ZBX-7484] fixed escalations not being stopped and generation of multiple successive OK or PROBLEM events (asaveljevs)
........S. [ZBX-7521] fixed crash if value cache entered low memory mode when adding a new item to the cache (wiper)
...G...PS. [ZBX-7521] fixed memory allocator realloc() function bug in low memory situations (wiper)
...G...PS. [ZBX-4243] fixed Zabbix syslog application names (RFC 5424 APP-NAME) (Andris)
..F....... [ZBX-3855] fixed bug that prevented the frontend from working with the Turkish locale (Pavels)
A......... [ZBX-7483] fixed user group delete validation (Eduard)